--- a/build.gradle
+++ b/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     compile 'com.umeng.sdk:common:latest.integration'
     compile 'com.google.zxing:core:3.3.0'
     compile 'com.edmodo:cropper:1.0.1'
+    compileOnly 'org.projectlombok:lombok:1.18.6'
+    annotationProcessor 'org.projectlombok:lombok:1.18.6'
 }
