--- a/build.gradle
+++ b/build.gradle
@@ -43,3 +43,10 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.2'
     testCompileOnly 'org.projectlombok:lombok:1.18.2'
 }
+buildscript {
+    repositories {
+        mavenCentral()
+        jcenter()
+        google()
+    }
+}
